* fixed a bug with broken certificates, where the blue theme was showing first, then the red theme when re-activating the window.

--- a/data/about.html
+++ b/data/about.html
@@ -221,6 +221,11 @@
                     You can <a href="mailto:sslpersonas@tobitobi.de">write him an email</a>
                     if there's something you need to talk about.
                 </p>
+                <h2>Is SSLPersonas Open Source software?</h2>
+                <p>
+                    Yes, it is. You can find its source code on <a href="https://github.com/TobiasStockinger/SSLPersonas">
+                    GitHub</a>.
+                </p>
                 <h2>How can I contribute to SSLPersonas</h2>
                 <p>
                     You can either start coding with Tobi on <a href="https://github.com/TobiasStockinger/SSLPersonas">
